Img, Logo and Some Text

--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -12,8 +12,8 @@
         <div class="heading-block centered-block align-center">
             <div class="container">
                     <h5 class="heading-alt" style="margin-bottom: 8px;"><span class="fa fa-calendar-o base-clr-txt"></span><span style="background-color: rgba(254, 73, 24, 1)">09.AU</span> <span class="fa fa-map-marker base-clr-txt" style="margin-left: 14px;"></span><span style="background-color: rgba(254, 73, 24, 1)">Zürich, CH</span></h5>
-                    <h1 class="extra-heading" style="background-color: rgba(254, 73, 24, 1)"><strong>Urban</strong> Acro <strong>Festival</strong>!</h1>
-                    <h6 class="thin base-font" style="background-color: rgba(254, 73, 24, 1)">What does a dyslexic cow say? <strong>Oooommmm</strong>. <3</h6>
+                    <h1 class="extra-heading" >Urban Acro Festival</h1>
+                    <h6 class="thin base-font" style="background-color: rgba(254, 73, 24, 1)">What does a dyslexic cow say? <strong>OOoooM</strong>.❤</h6>
                 <div class="btns-container">
                     <a href="#" class="btn btn-md" data-modal-link="email-ticket">REGISTER</a>
                 </div>
