--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="col-sm-7 align-left">
                             <h6>Züri Community</h6>
-                            <p>We want to share, play and laught with all the Zürich Acro Community!!! Theres probably no better place to spend this 3 days full of Acro, than the <a href="https://zirkusquartier.ch/">Zirkusquartier</a>.You'll have more then 16 Acro Workshops, daily yoga and handstand classes, awesome food and more then one special surpirse during the Weekend!</p>
+                            <p>We want to share, play and laugh with all the Zürich Acro Community!!! There's probably no better place to spend this 3 days full of Acro, than the <a href="https://zirkusquartier.ch/">Zirkusquartier</a>.You'll have more then 16 Acro Workshops, daily yoga and handstand classes, awesome food and more then one special surpirse during the Weekend!</p>
                             <p>The invitation is open for ALL levels, experiences, shapes and sizes! EVERYONE is welcome to come and share the fun of Acro and move with us!</p>
                         </div>
                     </div>
