--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -130,7 +130,7 @@
 			<div class="col-sm-6 align-right fullwidth-column">
 				<article>
 					<h3>Food Corner</h3>
-                    <p><small class="text-alt">Not to picky <span class="highlight"> only local, fair, organic and vegan with Love</span></small></p>
+                    <p><small class="text-alt">Not to picky <span class="highlight"> only local, fair, organic and vegan with Love.</span></small></p>
 					<p>We set a high value on healthy food. So everything you eat during this days comes from the local farmer and will be cooked with love. As we train all day long we need energy and we want to have hight quality.</p>
                     <p>With this in mind, we look to each other, to our food and to all other
 living beings we share the planet with. Vegan, organic, regional, fair
@@ -256,10 +256,11 @@ to play here and now, to stay here and now.
 
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Michael im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Michael</h3>
                     <p class="text-alt"><small>St. Gallen</small></p>
-                    <p class="about"></p>
+                    <p class="about">Michaels first passion was Tango, argentinan dance he teaches since many years in St. Gallen.
+                    With that backgroup you can expect Accents & Shapings to be on the vocabulary of his performing Worshops!</p>
                     <ul class="speaker-socials">
                         <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li>
                         <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li>
@@ -270,13 +271,14 @@ to play here and now, to stay here and now.
 
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Lorenz und Cornelia im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Lorenz & Cornelia</h3>
                     <p class="text-alt"><small>Zürich</small></p>
-                    <p class="about"></p>
+                    <p class="about">Much could be said about the Duo Scacciapensieri, they are by far the most exprienced teachers in the list. Colorfull performances are allways in the pallete
+                    , have their own Kid Zirkus School a Handstand Academy and are founders of Manege at the ASVZ. </p>
                     <ul class="speaker-socials">
-                        <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li>
+                        <li><a href="https://www.facebook.com/handstandacademy"><span class="fa fa-facebook"></span></a></li>
+                        <li><a href="https://coloro.ch"><span class="fa fa-external-link"></span></a></li>
                     </ul>
                 </div>
             </div>
@@ -287,7 +289,8 @@ to play here and now, to stay here and now.
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Tanja & Lisa</h3>
                     <p class="text-alt"><small>Zürich</small></p>
-                    <p class="about"></p>
+                    <p class="about">Tanja is a acroyogi since the time where could count the members with one hand.
+                    With Lisa they started a new weekly class sharing and playing with all those creative moves they collected in this years.</p>
                     <ul class="speaker-socials">
                         <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li>
                         <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li>
@@ -299,26 +302,11 @@ to play here and now, to stay here and now.
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
-                    <h3 class="name">Josh & Cloie</h3>
+                    <h3 class="name">Josh & Cloe</h3>
                     <p class="text-alt"><small>Basel</small></p>
-                    <p class="about"></p>
+                    <p class="about">What a power duo this two are, going from 0 to 100 in .1 Seconds. Guess you can go so when your a natural mover, passionat about what you do,
+                    and just give all your heart to it. Very happy to count with this Friends form Basel. Looking forward to the nice surprises they bring!</p>
                     <ul class="speaker-socials">
-                        <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li>
-                    </ul>
-                </div>
-            </div>
-
-
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
-                    <h3 class="name">Sebastian</h3>
-                    <p class="text-alt"><small>Sion</small></p>
-                    <p class="about"></p>
-                    <ul class="speaker-socials">
-                        <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li>
                     </ul>
                 </div>
             </div>
