--- a/acrofestival/templates/pages/home.html
+++ b/acrofestival/templates/pages/home.html
@@ -225,65 +225,55 @@ she has this experience and know who much you Acro-Monkey can eat! ;-)</p>
             <!-- Teachers Come here :D -->
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias Bleisch und Paule Urban Acro Festival Zürich" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias und Paule Urban Acro Festival Zürich" class="img-responsive"></div>
                     <h3 class="name">Matthias & Paulina</h3>
                     <p class="text-alt"><small>Zürich roots ;D</small></p>
-                    <p class="about">Feet on the head! Crazy acrobats, who loves challenges and know many
-acro tricks in standing. We are happy to have them at the Urban Acro
-Festival in Zürich! They will come up for you with amazing workshops.</p>
+                    <p class="about">Feet on the head! Crazy acrobats, who loves challenges and know many acro tricks in standing. We are happy to have them at the Urban Acro Festival in Zürich! They will come up for you with amazing workshops.</p>
                     <ul class="speaker-socials">
                     </ul>
                 </div>
             </div>
-
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/acrofestival_salvatore.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Salvatore & Laura</h3>
                     <p class="text-alt"><small>Zürich</small></p>
-                    <p class="about">He teaches Yoga, AcroYoga, Meditation and Slackline and combines these
-activities in a creative and playful way. The practice of extreme sports
-combined to meditation establishes the balance between playing and
-staying. In both activities the ultimate goal is to live here and now,
-to play here and now, to stay here and now.
-</p>
+                    <p class="about">He teaches Yoga, AcroYoga, Meditation and Slackline and combines these activities in a creative and playful way. The practice of extreme sports combined to meditation establishes the balance between playing and staying. In both activities the ultimate goal is to live here and now, to play here and now, to stay here and now.
+                    </p>
                     <ul class="speaker-socials">
                         <li><a href="https://www.facebook.com/bareful"><span class="fa fa-facebook"></span></a></li>
                         <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li>
                     </ul>
                 </div>
             </div>
-
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Michael im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Michael</h3>
                     <p class="text-alt"><small>St. Gallen</small></p>
-                    <p class="about">Michaels first passion was Tango, argentinan dance he teaches since many years in St. Gallen.
-                    With that backgroup you can expect Accents & Shapings to be on the vocabulary of his performing Worshops!</p>
+                    <p class="about">
+                    Michaels first passion was Tango, argentinan dance he teaches since many years in St. Gallen. With that backgroup you can expect Accents & Shapings to be on the vocabulary of his performing Worshops!
+                    </p>
                     <ul class="speaker-socials">
                         <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li>
                         <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li>
                     </ul>
                 </div>
             </div>
-
-
+            <div class="col-sm-12"></div>
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Lorenz und Cornelia im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Lorenz & Cornelia</h3>
                     <p class="text-alt"><small>Zürich</small></p>
-                    <p class="about">Much could be said about the Duo Scacciapensieri, they are by far the most exprienced teachers in the list. Colorfull performances are allways in the pallete
-                    , have their own Kid Zirkus School a Handstand Academy and are founders of Manege at the ASVZ. </p>
+                    <p class="about">
+                    Much could be said about the Duo Scacciapensieri, they are by far the most exprienced teachers in the list. Colorfull performances are allways in the pallete, have their own Kid Zirkus School a Handstand Academy and are founders of Manege at the ASVZ. </p>
                     <ul class="speaker-socials">
                         <li><a href="https://www.facebook.com/handstandacademy"><span class="fa fa-facebook"></span></a></li>
                         <li><a href="https://coloro.ch"><span class="fa fa-external-link"></span></a></li>
                     </ul>
                 </div>
             </div>
-
-
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
@@ -297,8 +287,6 @@ to play here and now, to stay here and now.
                     </ul>
                 </div>
             </div>
-
-
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'images/speakers/speaker1.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
@@ -310,7 +298,6 @@ to play here and now, to stay here and now.
                     </ul>
                 </div>
             </div>
-
         </div>
     </section>
 
@@ -839,7 +826,6 @@ to play here and now, to stay here and now.
             <div class="sponsors">
                 <div class="sponsor big"><img src="{% static 'images/sponsors/bareful.png' %}" alt=""></div>
                 <div class="sponsor big"><img src="{% static 'images/sponsors/acrolama.png' %}" alt=""></div>
-                <div class="sponsor big"><img src="{% static 'images/sponsors/kate.png' %}" alt=""></div>
                 <div class="sponsor big"><img src="{% static 'images/sponsors/chnopf.png' %}" alt=""></div>
             </div>
 
