quick typo css and js

--- a/acrofestival/templates/pages/winteracro/snippets/jsfest.html
+++ b/acrofestival/templates/pages/winteracro/snippets/jsfest.html
@@ -2,12 +2,12 @@
     <script type="text/javascript">
       window.FontAwesomeConfig = { autoReplaceSvg: false }
     </script>
-    <script src="{% static "fest/js/jquery.min.js"%}"></script>
-    <script src="{% static "fest/js/jquery.scrollex.min.js"%}"></script>
-    <script src="{% static "fest/js/jquery.scrolly.min.js"%}"></script>
-    <script src="{% static "fest/js/skel.min.js"%}"></script>
-    <script src="{% static "fest/js/util.js"%}"></script>
-    <!--[if lte IE 8]><script src="{% static "fest/js/ie/respond.min.js" %}></script><![endif]-->
-    <script src="{% static "fest/js/main.js"%}"></script>
-    <script src="{% static "fest/js/fontawesome.js"%}"></script>
-    <script src="{% static "fest/js/v4-shims.js"%}"></scripts>
+    <script src="{% static "winteracro/js/jquery.min.js"%}"></script>
+    <script src="{% static "winteracro/js/jquery.scrollex.min.js"%}"></script>
+    <script src="{% static "winteracro/js/jquery.scrolly.min.js"%}"></script>
+    <script src="{% static "winteracro/js/skel.min.js"%}"></script>
+    <script src="{% static "winteracro/js/util.js"%}"></script>
+    <!--[if lte IE 8]><scrit src="{% static "winteracro/js/ie/respond.min.js" %}></script><![endif]-->
+    <script src="{% static "winteracro/js/main.js"%}"></script>
+    <script src="{% static "winteracro/js/fontawesome.js"%}"></script>
+    <script src="{% static "winteracro/js/v4-shims.js"%}"></scripts>
