--- a/acrofestival/templates/pages/winteracro/snippets/cssfest.html
+++ b/acrofestival/templates/pages/winteracro/snippets/cssfest.html
@@ -1,5 +1,5 @@
         {% load static %}
-        <!--[if lte IE 8]><script src="{% static 'fest/js/ie/html5shiv.js' %}"></script><![endif]-->
+        <!--[if lte IE 8]><script src="{% static 'winteracro/js/ie/html5shiv.js' %}"></script><![endif]-->
 		<link rel="stylesheet" type="text/css" href="{% static 'winteracro/css/main.css' %}"/>
         <link rel="stylesheet" type="text/css" href="{% static 'winteracro/css/font-awesome.min.css' %}"/>
         <!--[if lte IE 9]><link rel="stylesheet" href="{% static 'winteracro/css/ie9.css' %}" /><![endif]-->
