--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -18,8 +18,8 @@
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="{% static 'js/html5shiv.js'%}"></script>
-        <script src="{% static 'js/respond.min.js'%}"></script>
+        <script src="{% static 'urbanacro/js/html5shiv.js'%}"></script>
+        <script src="{% static 'urbanacro/js/respond.min.js'%}"></script>
     <![endif]-->
 
     {% block css %}
