Google Maps Settings

--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -834,7 +834,7 @@ she has this experience and know who much you Acro-Monkey can eat! ;-)</p>
 
     <section id="contacts">
         <div class="contacts-wrapper">
-                <div id="contacts-map" class="map" data-settings="{% static "pages/urbanacro/map-settings.json"%}" style="height:560px;"></div>
+                <div id="contacts-map" class="map" data-settings="{% static "urbanacro/map-settings.json"%}" style="height:560px;"></div>
 
             <div class="container contacts-on-map-container">
                 <div class="contacts-on-map">
