--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -228,7 +228,7 @@ she has this experience and know who much you Acro-Monkey can eat! ;-)</p>
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_mad_und_pau.jpg' %}" alt="Matthias und Paule Urban Acro Festival Zürich" class="img-responsive"></div>
                     <h3 class="name">Matthias & Paulina</h3>
                     <p class="text-alt"><small>Zürich roots ;D</small></p>
-                    <p class="about">Feet on the head! Crazy acrobats, who loves challenges and know many acro tricks in standing. We are happy to have them at the Urban Acro Festival in Zürich! They will come up for you with amazing workshops.</p>
+                    <p class="about">Feet on the head! Awesome acrobats, who love to move and know many may tricks in standing. We are happy to have them at the Urban Acro Festival again!</p>
                     <ul class="speaker-socials">
                     </ul>
                 </div>
@@ -248,11 +248,11 @@ she has this experience and know who much you Acro-Monkey can eat! ;-)</p>
             </div>
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/speaker1.jpg' %}" alt="Michael im Urban Acro Festival" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_michael.jpg' %}" alt="Michael im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Michael</h3>
                     <p class="text-alt"><small>St. Gallen</small></p>
                     <p class="about">
-                    Michaels first passion was Tango, argentinan dance he teaches since many years in St. Gallen. With that backgroup you can expect Accents & Shapings to be on the vocabulary of his performing Worshops!
+                    Michaels first passion was Tango, Argentinan dance he teaches for many years in St. Gallen, Winthertur and Zürich. With this backgroup, you can expect Accents & Shapings to be on the vocabulary of his performing Worshops!
                     </p>
                     <ul class="speaker-socials">
                         <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li>
@@ -263,11 +263,11 @@ she has this experience and know who much you Acro-Monkey can eat! ;-)</p>
             <div class="col-sm-12"></div>
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/speaker1.jpg' %}" alt="Lorenz und Cornelia im Urban Acro Festival" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_lorenz_und_cornelia.jpg' %}" alt="Lorenz und Cornelia im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Lorenz & Cornelia</h3>
                     <p class="text-alt"><small>Zürich</small></p>
                     <p class="about">
-                    Much could be said about the Duo Scacciapensieri, they are by far the most exprienced teachers in the list. Colorfull performances are allways in the pallete, have their own Kid Zirkus School a Handstand Academy and are founders of Manege at the ASVZ. </p>
+                    Much could be said about the Duo Scacciapensieri, they are by far the most exprienced teachers coming this year. Colorfull performances are always in the pallete. They have their own Kid Zirkus School, a Handstand Academy and are founders of Manege at the ASVZ.</p>
                     <ul class="speaker-socials">
                         <li><a href="https://www.facebook.com/handstandacademy"><span class="fa fa-facebook"></span></a></li>
                         <li><a href="https://coloro.ch"><span class="fa fa-external-link"></span></a></li>
@@ -276,24 +276,31 @@ she has this experience and know who much you Acro-Monkey can eat! ;-)</p>
             </div>
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/speaker1.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_tanja_und_lisa.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Tanja & Lisa</h3>
                     <p class="text-alt"><small>Zürich</small></p>
-                    <p class="about">Tanja is a acroyogi since the time where could count the members with one hand.
-                    With Lisa they started a new weekly class sharing and playing with all those creative moves they collected in this years.</p>
+                    <p class="about">Tanja is one of the very first acroyogis in Zürich!. With Lisa they started a class to share their love for acro ... and all those creative moves they collected in this years.</p>
                     <ul class="speaker-socials">
-                        <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li>
+                        <li><a href="https://www.facebook.com/tanja.luchsinger"><span class="fa fa-facebook"></span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/speaker1.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_josh_and_cloe.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Josh & Cloe</h3>
                     <p class="text-alt"><small>Basel</small></p>
-                    <p class="about">What a power duo this two are, going from 0 to 100 in .1 Seconds. Guess you can go so when your a natural mover, passionat about what you do,
-                    and just give all your heart to it. Very happy to count with this Friends form Basel. Looking forward to the nice surprises they bring!</p>
+                    <p class="about">Tossing around and catching again. Doesn't matter if they have to balance or dance, they enjoy every second of it. Take part in their workshops, which will give you a better understanding of dynamic skills at the Urban Acro Festival!</p>
+                    <ul class="speaker-socials">
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="speaker">
+                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_olivier.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
+                    <h3 class="name">Olivier & Irene</h3>
+                    <p class="text-alt"><small>Geneva</small></p>
+                    <p class="about">Fly High and Land soft is their mantra for all the Icarian moves they do. Very happy to have Olivier and Irene at this version of the Urban Acro Festival!</p>
                     <ul class="speaker-socials">
                     </ul>
                 </div>
@@ -317,7 +324,7 @@ she has this experience and know who much you Acro-Monkey can eat! ;-)</p>
                     <ul class="nav nav-schedule">
                         <li class="active"><a href="#schedule3_day1" data-toggle="tab"><h5 class="highlight">Day 1</h5><p class="text-alt">09/08/2019</p></a></li>
                         <li><a href="#schedule3_day2" data-toggle="tab"><h5 class="highlight">Day 2</h5><p class="text-alt">10/08/2019</p></a></li>
-                        <li><a href="#schedule3_day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">10/08/2019</p></a></li>
+                        <li><a href="#schedule3_day3" data-toggle="tab"><h5 class="highlight">Day 3</h5><p class="text-alt">11/08/2019</p></a></li>
                     </ul>
                     <!-- Navigation by day end -->
 
@@ -907,7 +914,7 @@ she has this experience and know who much you Acro-Monkey can eat! ;-)</p>
                    </select>
                 </fieldset>
                 <fieldset class="col-sm-12">
-                    <input id="privacy" name="privacy" type="checkbox" required><label for="privacy">I read & agree with <a href="/#pricing">Return Policies</a> </label>
+                    <input id="privacy" name="privacy" type="checkbox" required><label for="privacy">I read & agree with <a href="{% url "urbanacro"%}#pricing">Return Policies</a> </label>
                     <br />
                     <br />
                 </fieldset>
