--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -124,14 +124,13 @@
     </section>
     <!-- Info Section -->
     <section class="fullwidth-section">
-		<div class="fullwidth-path">
+        <div class="fullwidth-path">
                 <div class="fullwidth-section-bg bg-right" style="background-image: url('{% static 'urbanacro/images/acrofestival_food_vegan.jpg'%}');"></div>
-
-			<div class="col-sm-6 align-right fullwidth-column">
-				<article>
-					<h3>Food Corner</h3>
+            <div class="col-sm-6 align-right fullwidth-column">
+                <article>
+                    <h3>Food Corner</h3>
                     <p><small class="text-alt">Not to picky <span class="highlight"> only local, fair, organic and vegan with Love.</span></small></p>
-					<p>We set a high value on healthy food. So everything you eat during this days comes from the local farmer and will be cooked with love. As we train all day long we need energy and we want to have hight quality.</p>
+                    <p>We set a high value on healthy food. So everything you eat during this days comes from the local farmer and will be cooked with love. As we train all day long we need energy and we want to have hight quality.</p>
                     <p>With this in mind, we look to each other, to our food and to all other
 living beings we share the planet with. Vegan, organic, regional, fair
 and food-waste-conscious ingredients and processes are a given, forming
@@ -139,25 +138,24 @@ a solid foundation upon which creativity roams free.</p>
                     <p>Kremena our cook is insatiably curious about all aspects of plant-based cuisine, constantly nibbling on fascinating information about preparation, nutrition, origin and sustainability. She particularly enjoys sharing food.</p>
                     <p>As she cooked allready amazing food for our last Winter Acro Festival,
 she has this experience and know who much you Acro-Monkey can eat! ;-)</p>
-				</article>
-			</div>
-		</div>
-
-		<div class="fullwidth-path">
+                </article>
+            </div>
+        </div>
+        <div class="fullwidth-path">
                 <div class="fullwidth-section-bg bg-left" style="background-image: url('{% static 'urbanacro/images/acrofestival_sleeping.jpg'%}');"></div>
-			<div class="col-sm-6 col-sm-offset-6 align-left fullwidth-column">
-				<article>
-					<h3>Sleeping Area</h3>
-					<p><small class="text-alt">Better <span class="highlight">together</span></small></p>
-					<p>The gallery above the trainings hall and the barn in the Zirkusquartier
+            <div class="col-sm-6 col-sm-offset-6 align-left fullwidth-column">
+                <article>
+                    <h3>Sleeping Area</h3>
+                    <p><small class="text-alt">Better <span class="highlight">together</span></small></p>
+                    <p>The gallery above the trainings hall and the barn in the Zirkusquartier
                     area will be our two sleeping halls.</p>
                     <p>Each spot fit approximately 25 people. Simple and easy<span class="highlight"> first comes first serves</span>.</p>
                     <p><strong>Bring your own sleeping bag and matt to sleep.</strong></p>
                     <p>More comfort?<br><br>In Zurich City there are many hostels or check out www.airbnb.com<br></p>
-				</article>
-			</div>
-		</div>
-	</section>
+                </article>
+            </div>
+        </div>
+    </section>
 
     <!-- Counters Section -->
 
@@ -279,9 +277,9 @@ she has this experience and know who much you Acro-Monkey can eat! ;-)</p>
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_tanja_und_lisa.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
                     <h3 class="name">Tanja & Lisa</h3>
                     <p class="text-alt"><small>Zürich</small></p>
-                    <p class="about">Tanja is one of the very first acroyogis in Zürich!. With Lisa they started a class to share their love for acro ... and all those creative moves they collected in this years.</p>
+                    <p class="about">We are two women passionately practicing AcroYoga for around 5 years. It’s important for us to create an environment in which everyone can immerse him/herself into all the roles of AcroYoga. We invite you to challenge your mental boundaries of “I can’t do that, I am too weak”, to fly and trust. Immerse yourself with us into learning some beautiful poses, fun flows and engaging in a mindful group practice!</p>
                     <ul class="speaker-socials">
-                        <li><a href="https://www.facebook.com/tanja.luchsinger"><span class="fa fa-facebook"></span></a></li>
+                        <li><a href="https://acroyoga-essentials.com"><span class="fa fa-external-link"></span></a></li>
                     </ul>
                 </div>
             </div>
