--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -5,8 +5,8 @@
 <!-- Header -->
     <header id="header" class="alt">
             <span class="logo"><img src="{% static "winteracro/images/logo_vek.svg"%}" alt="" /></span>
-        <h1>2nd Winter Acro Festival{% tinycontent_simple 'general_title' %}</h1>
-        <p>22. - 27. February 2019{% tinycontent_simple 'general_date' %}</br>
+        <h1>2nd Winter Acro Festival{% tinycontent_simple 'winter_general_title' %}</h1>
+        <p>22. - 27. February 2019{% tinycontent_simple 'winter_general_date' %}</br>
         Register <a href="{% url "winterform"%}">HERE</a></p>
     </header>
     {% include 'pages/winteracro/snippets/navhome.html' %}
@@ -20,7 +20,7 @@
                             <h2>What's it all about</h2>
                         </header>
                             <p>
-                            {% tinycontent_simple 'home_intro'%}
+                            {% tinycontent_simple 'winter_home_intro'%}
                             Welcome!</br> We'd like to invite you to the 2nd version of the Winter Acro Festival in
                             Lenk, Switzerland. It's going to take place from:</br>
                             <u>22 till 27 of February 2019</u></br>
@@ -51,7 +51,7 @@
                     <li>
                         <span class="icon major style1 fas fa-bed"></span>
                         <h3>Accommodation</h3>
-                        <p>{% tinycontent_simple 'home_accomodation' %}
+                        <p>{% tinycontent_simple 'winter_home_accomodation' %}
                         This year the dorm is 4 min. walk from the hall - No LamaAirlines, sorry :( -. Important is
                         that you bring your own sleeping bag! *Accommodation is not included in single day tickets.
                         More important details:</br></br>
@@ -61,7 +61,7 @@
                     <li>
                         <span class="icon major style3 fas fa-utensils"></span>
                         <h3>Food</h3>
-                        <p>{% tinycontent_simple 'home_food' %}
+                        <p>{% tinycontent_simple 'winter_home_food' %}
                         Food plays an important role in this festival. Main dishes, healthy snacks and fruits are all
                         organic, mostly local, vegan and cooked with love.</br>* <u>Please note that there will be some help
                         asked from everyone arround small kitchen tasks.</u></br></br>
@@ -70,7 +70,7 @@
                     <li>
                         <span class="icon major style5 fas fa-cogs"></span>
                         <h3>Workshops</h3>
-                        <p>{% tinycontent_simple 'home_workshops' %}
+                        <p>{% tinycontent_simple 'winter_home_workshops' %}
                         There'll be 11 rounds of acro workshops and space for a constant jam. Experience in acro is
                         important for your own enjoyment.</br>* <u>There will be no beginner workshops</u>.</br></br>
                         <a class="button" href="#workshops">TEACHERS</a>
@@ -79,7 +79,7 @@
                     <li>
                         <span class="icon major style3 fas fa-snowflake"></span>
                         <h3>Special events</h3>
-                        <p>{% tinycontent_simple 'home_specialevent' %}
+                        <p>{% tinycontent_simple 'winter_home_specialevent' %}
                         Monday morning we will organized a <u>snow event up on the mountain</u> at the ski resort
                         (If the weather is good <i class="fa fa-hand-o-left" aria-hidden="true"></i>). Bring warm
                         clothes for Outdoor acro. Free afternoon for ski, snowboard or free floor at the hall.</br>
@@ -90,7 +90,7 @@
                     <li>
                         <span class="icon major style2 fas fa-map-marker"></span>
                         <h3>Location</h3>
-                        <p>{% tinycontent_simple 'home_location' %}
+                        <p>{% tinycontent_simple 'winter_home_location' %}
                         This Festival takes place in Lenk im Simmental, Switzerland. A complete description on how to
                         get there can be found in the following link:</br></br>
                         <a class="button" href="{% url 'winterlocation'%}#location">CLICK HERE</a>
@@ -99,7 +99,7 @@
                     <li>
                         <span class="icon major style1 fas fa-money-bill-wave"></span>
                         <h3>Prices</h3>
-                        <p>{% tinycontent_simple 'home_prices' %}
+                        <p>{% tinycontent_simple 'winter_home_prices' %}
                         We have tickets based on the amount of days you stay at the festival. All include:</br>
                         accomodation, food, workshops and mountain lift ticket.</br>
                         <u>Single day tickets don't include breakfast</u>. Conditions and prices:</br></br>
@@ -132,7 +132,7 @@
                                     With these two beauties we go way back to the begginings of our carriers. Amazing
                                     friends and teachers!! We're very happy to have them back.<br>
                                     Alfonso has such a encouraging energy. You cannot stop him doing acro!<br>
-                                    Celine, well... if her smilie doesn't captivate you, just wait to see her fly Icarians 
+                                    Celine, well... if her smilie doesn't captivate you, just wait to see her fly Icarians
                                     and whips. Jaw dropping.<br>
                                     They will be sharing their whips and Icarian moves in this Winter Festival 2019.
                                     </p>
@@ -204,9 +204,9 @@
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
-                                    It's been very nice to see how this friends have grown so fast and good in their Acro paths. Touring 
+                                    It's been very nice to see how this friends have grown so fast and good in their Acro paths. Touring
                                     with their acro company all arround europe, giving very nice workshops. Very happy to have them on Board!
-                                    We picked them up in Berlin and Graz to bring them direct to Lenk yuhuiii! 
+                                    We picked them up in Berlin and Graz to bring them direct to Lenk yuhuiii!
                                     </p>-->
                                     <p><h2>Bruno</h2></p>
                                     <p>
@@ -226,7 +226,7 @@
             <section id="schedule" class="main special">
                 <header class="major">
                     <h2>Schedule</h2>
-                    <p>{% tinycontent_simple 'home_schedule' %} Some changes are to be expected, but it's our best approximation at this time :)</p>
+                    <p>{% tinycontent_simple 'winter_home_schedule' %} Some changes are to be expected, but it's our best approximation at this time :)</p>
                 </header>
                     <h2>Friday</h2>
                     <ul class="statistics">
