--- a/acrofestival/templates/pages/winteracro/workshops.html
+++ b/acrofestival/templates/pages/winteracro/workshops.html
@@ -1,4 +1,4 @@
-{% extends "basefest.html" %}
+{% extends "pages/winteracro/basefest.html" %}
 {% block content %}
 {% load static %}
 <!-- Wrapper -->
