--- a/acrofestival/templates/pages/winteracro/location.html
+++ b/acrofestival/templates/pages/winteracro/location.html
@@ -1,5 +1,5 @@
 {% extends "pages/winteracro/basefest.html" %}
-{% block content %}{% load static %}{% tinycontent_tags %}
+{% block content %}{% load static %}{% load tinycontent_tags %}
 <!-- Wrapper -->
             <div id="wrapper">
                 <!-- Header -->
